--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <url>http://www.example2.com/</url>
     </organization>
 
-    <name>testissuecreator5</name>
+    <name>Test Issue Creator5</name>
     <description>This is the com.topshelfsolution:testissuecreator5 plugin for Atlassian JIRA.</description>
     <packaging>atlassian-plugin</packaging>
 
