--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <modelVersion>4.0.4</modelVersion>
     <groupId>com.topshelfsolution</groupId>
     <artifactId>testissuecreator</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.2</version>
 
     <organization>
         <name>Example2 Company</name>
