--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <organization>
         <name>Example2 Company</name>
-        <url>http://www.example2.com/</url>
+        <url>http://www.example.com/</url>
     </organization>
 
     <name>Test Issue Creator5</name>
