--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,15 +11,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: "GITHUB_REF"
-        run: echo "GITHUB_REF is: $GITHUB_REF"
+        run: 'echo "GITHUB_REF is: $GITHUB_REF"'
       - name: "GITHUB_SHA"
-        run: echo "GITHUB_SHA is: $GITHUB_SHA"
+        run: 'echo "GITHUB_SHA is: $GITHUB_SHA"'
       - name: "GITHUB_JOB"
-        run: echo "GITHUB_JOB is: $GITHUB_JOB"
+        run: 'echo "GITHUB_JOB is: $GITHUB_JOB"'
       - name: "GITHUB_JOB"
-        run: echo "GITHUB_JOB is: $GITHUB_JOB"
+        run: 'echo "GITHUB_JOB is: $GITHUB_JOB"'
       - name: "GITHUB_RUN_ID"
-        run: echo "GITHUB_RUN_ID is: $GITHUB_RUN_ID"
+        run: 'echo "GITHUB_RUN_ID is: $GITHUB_RUN_ID"'
         
         
 
