--- a/.github/workflows/trivy-action.yml
+++ b/.github/workflows/trivy-action.yml
@@ -1,9 +1,6 @@
 name: trivy-action
 on:
-  push:
-    branches:
-    - master
-  pull_request:
+  workflow_dispatch
 jobs:
   build:
     name: Build
@@ -17,4 +14,10 @@ jobs:
       with:
         scan-type: 'fs'
         scan-ref: '.'
-#        trivy-config: trivy.yaml
+        format: 'sarif'
+        output: 'trivy-results.sarif'
+        
+    - name: Build the image
+      run: |
+        SARIF=$(cat trivy-results.sarif)
+        echo "$SARIF"
