--- a/.github/workflows/trivy-action.yml
+++ b/.github/workflows/trivy-action.yml
@@ -14,6 +14,8 @@ jobs:
       with:
         scan-type: 'fs'
         scan-ref: '.'
+        severity: 'CRITICAL,HIGH'
+        ignore-unfixed: true
         format: 'sarif'
         output: 'trivy-results.sarif'
         
