trivy action param fix

--- a/.github/workflows/trivy-action.yml
+++ b/.github/workflows/trivy-action.yml
@@ -18,6 +18,7 @@ jobs:
         ignore-unfixed: true
         format: 'sarif'
         output: 'trivy-results.sarif'
+        limit-severities-for-sarif: true
         
     - name: Display SARIF
       run: |
