--- a/.github/workflows/trivy-action.yml
+++ b/.github/workflows/trivy-action.yml
@@ -19,6 +19,7 @@ jobs:
         format: 'sarif'
         output: 'trivy-results.sarif'
         limit-severities-for-sarif: true
+        hide-progress: true
         
     - name: Display SARIF
       run: |
